--- a/hugo.toml
+++ b/hugo.toml
@@ -29,5 +29,5 @@ theme = 'PaperMod'  # Assicurati che il tema sia corretto
 [[menu.main]]
   identifier = "games"
   name = "Giochi"
-  url = "/games/games"
+  url = "/games/"
   weight = 4
